# linebreaker

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  __init__.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
linebreaker.egg-info/: PKG-INFO
src/linebreaker/: __init__.py  _version.py
src/linebreaker/tests/: test_core.py  test_doc.qmd  test_pandoc.py
tests/: __init__.py
